# similator

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml  Test_CI.yml  docs.yml  run_tests.yml
app/: __init__.py
app/similator/src/: __init__.py  memory.py  text_similator.py  valid_data.py
app/similator/tests/: test_exceptions.py  test_memory.py  test_text_similator.py  test_valid_data.py
docs/: LICENSE  requirements.txt
docs/source/: api.rst  api_reference.md  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.md  installation.rst  license.rst  usage.md
rust/: Cargo.toml
